<resources>
    <string name="app_name">Pruefungsplaner</string>
    <!-- Database -->
    <string name="server_adress">http://85.214.233.224:8080/</string>
    <string name="server_url">MeinPruefplan/resources/org.fh.ppv.</string>
    <string name="FacultyUrl">"http://85.214.233.224:8080/MeinPruefplan/resources/org.fh.ppv.entity.faculty/</string>
    <string name="ExamPeriodUrl">"http://85.214.233.224:8080/MeinPruefplan/resources/org.fh.ppv.entity.pruefperioden/"</string>

    <!-- Ui -->
    <string name="currentPeriod">Die akutelle Phase konnte nicht geladen werden</string>
    <string name="favorite_one_course">Bitte favorisieren Sie mindestens einen Studiengang</string>
    <string name="favorite_main_course">Sie können Ihren Hauptstudiengang nicht abwählen</string>
    <string name="choose_main">Wählen Sie Ihren Hauptstudiengang</string>
    <string name="choose_module">Modul:</string>
    <string name="choose_faculty">Fachbereich auswählen</string>
    <string name="choose_course">Wählen Sie Ihre Studiengänge:</string>
    <string name="no_course">Keine Studiengänge vorhanden</string>
    <string name="choose_course2">Studiengang:</string>
    <string name="choose_prof">Prüfer:</string>
    <string name="semester_ui">Semester:</string>
    <string name="ok">Ok</string>
    <string name="plan">PRÜFPLAN</string>
    <string name="search">Suche</string>
    <string name="search_date">Tag:</string>
    <string name="open_calendar">Kalender öffnen</string>
    <string name="date_ui">Datum</string>
    <string name="server">&#160;&#160;&#160;Serveradresse:</string>
    <string name="settings_del_fav">&#160;Favoriten löschen&#160;</string>
    <string name="settings_del_db">&#160;Datenbank löschen&#160;</string>
    <string name="settings_act_fav">Prüfungen aktualisieren</string>
    <string name="settings_del_cal">Kalender Einträge löschen&#160;</string>
    <string name="settings_act_cal">Kalender aktualisieren</string>
    <string name="settings_sync_cal">Synchronisation Kalender</string>
    <string name="settings_privacy_declaration">Datenschutzerklärung</string>

    <!-- Navigation -->
    <string name="title_calender">Alle Prüfungen</string>
    <string name="title_search">Erweiterte Suche</string>
    <string name="title_exam">Meine Prüfungen</string>
    <string name="title_settings">Optionen</string>
    <string name="title_electiveModule">Wahlmodule</string>
    <string name="title_changeCourse">Studiengänge verwalten</string>
    <string name="title_changeFaculty">Fachbereich ändern</string>
    <string name="title_feedback">Feedback geben</string>
    <string name="title_close_app">Beenden</string>

    <!-- Jahreszeiten -->
    <string name="sommer">Sommer</string>
    <string name="winter">Winter</string>

    <!-- Nachricht -->
    <string name="noConnection">Keine Verbindung zum Server möglich.</string>
    <string name="load">Prüfungsdaten werden geladen</string>
    <string name="add">Hinzugefügt</string>
    <string name="delete">Entfernt</string>
    <string name="add_calendar">Prüfungen werden jetzt zum Kalender hinzugefügt.</string>
    <string name="delete_db">Lokale Datenbank gelöscht.</string>
    <string name="delete_calendar">Google Kalender Einträge gelöscht.</string>
    <string name="actualisation_calendar">Google Kalender aktualisiert.</string>
    <string name="delete_favorite">Favorisierte Prüfungen gelöscht.</string>
    <string name="add_favorite">Prüfungen wurden aktualisiert.</string>
    <string name="elective_search">Bitte wählen Sie einen Studiengang aus,
        oder geben einen Modulnamen ein der länger als drei Zeichen ist.</string>
    <string name="close_app">App beenden?</string>

    <!-- Start -->
    <string name="current">Aktuelle Prüfungsphase: \n&#160;</string>
    <string name="bis">&#160;bis&#160;</string>

    <!-- Klausuren Darstellung -->
    <string name="time">Uhrzeit:</string>
    <string name="prof">Prüfer:</string>
    <string name="semester">Semester:</string>
    <string name="information">Informationen zur Prüfung&#160;</string>
    <string name="course">Studiengang:&#160;</string>
    <string name="modul">Modul:&#160;</string>
    <string name="firstProf">Erstprüfer:&#160;</string>
    <string name="secondProf">Zweitprüfer:&#160;</string>
    <string name="date">Datum:&#160;</string>
    <string name="date2">Datum:&#160;</string>
    <string name="clockTime">Uhrzeit:&#160;</string>
    <string name="clockTime2">Uhrzeit:&#160;</string>
    <string name="clock">Uhr</string>
    <string name="room">Raum:&#160;</string>
    <string name="form">Prüfungsform:&#160;</string>
    <string name="fh_name">Fachhochschule Bielefeld</string>
    <string name="duration">Dauer:</string>

    <!-- Suche -->
    <string name="all">Alle</string>
    <string name="all_cours">Alle Studiengänge</string>
    <string name="modul_search">Klicken um Modul zu wählen</string>

    <string name="title_activity_recycleview_tabelle">RecycleviewTabelle</string>

    <!-- Feedback Form -->
    <string name="feedback_send">Senden</string>
    <string name="feedback_usability">Bedienbarkeit</string>
    <string name="feedback_stability">Fehlerfrei</string>
    <string name="feedback_functions">Funktionsumfang</string>
    <string name="feedback_text">Folgendes fand ich gut/schlecht:</string>
    <string name="sendedFeedBack">Danke für Ihr Feedback.</string>
    <string name="courseActualisation">Studiengänge aktualisiert.</string>
    <string name="feedbackPlaceholder">Platzhalter</string>

    <!-- Notification Channel -->
    <string name="channel_name">Pruefungsplaner Channel</string>
    <string name="channel_description">Used to send updates about new Examinationplans</string>

    <!-- Datenschutzerklärung -->
    <string name="privacyText">
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.

        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.

        Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.

        Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.

        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.

        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
    </string>
    <string name="action_menu_item_search">Search</string>
    <string name="action_menu_item_settings">Einstellungen</string>
    <string name="activity_suche_searchBtn_text">Suchen</string>
    <string name="wahlmodul_wahlmodul_TV">Wahlmodul:</string>
    <string name="layout_dialogue_filter_modul_tv">Modul:</string>
    <string name="layout_dialogue_filter_course_tv">Studiengang:</string>
    <string name="layout_dialogue_filter_faculty_tv">Fakultät:</string>
    <string name="layout_dialog_filter_reset_btn_text">Clear</string>
    <string name="layout_dialog_filter_userFilter_btn_text">Mein Studiengang</string>
    <string name="optionfragment_header_design">Design</string>
    <string name="optionfragment_header_calendar">Kalender</string>
    <string name="optionenfragment_darkmode">Dark Mode:</string>
    <string name="optionenfragment_theme">Theme:</string>
    <string name="optionfragment_header_pruefungen">Prüfungen</string>
    <string name="optionfragment_header_about">Über</string>
    <string name="optionenfragment_save_btn_text">Speichern</string>
    <string name="choose_course_all_btn_text">Alle</string>
    <string name="optionenfragment_impressum_text">Impressum</string>
    <string name="optionenfragment_about_text">Über</string>


    <string-array name="TestArray">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
        <item>Entry 4</item>
        <item>Entry 5</item>
        <item>Entry 6</item>
        <item>Entry 7</item>
        <item>Entry 8</item>
        <item>Entry 9</item>
        <item>Entry 10</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="optionfragment_header_updates">Updates</string>
    <string name="optionenfragment_auto_updates_switch_text">Im Hintergrund nach Prüfplanänderungen suchen</string>
    <string name="optionenfragment_auto_updates_intervall_text">Updateintervall:</string>
    <string name="optionenfragment_auto_updates_intervall_button">Intervall</string>
    <string name="optionenfragment_auto_updates_notificationsound_text">Benachrichtigungssound</string>
    <string name="choose_course_change_main_label_text">Hauptkurs wechseln:</string>
    <string name="calendarInsertionTypeLabel">Automatisch oder Manuell</string>
</resources>
