<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calender"
        android:icon="@drawable/ic_action_suche"
        android:title="@string/title_calender"/>

    <item
        android:id="@+id/navigation_medication"
        android:icon="@drawable/suche_nav"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/favoriten_nav"
        android:title="@string/title_exam"/>

    <item
        android:id="@+id/navigation_changeFaculty"
        android:icon="@drawable/ic_change_course"
        android:title="@string/title_changeFaculty"/>

    <item
        android:id="@+id/navigation_addCourse"
        android:icon="@drawable/baseline_library_add"
        android:title="@string/title_changeCourse"/>

    <item
        android:id="@+id/navigation_feedback"
        android:icon="@drawable/ic_baseline_feedback"
        android:title="@string/title_feedback"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/optionen_nav"
        android:title="@string/title_settings"/>

</menu>
