<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="51dp"
    android:minHeight="140dp"
    android:screenOrientation="portrait"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:src="@drawable/dotted_line"
                    app:tint="?attr/colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/optionfragment_header_design"
                    android:textColor="?attr/colorOnBackground" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:src="@drawable/dotted_line"
                    app:tint="?attr/colorOnBackground" />
            </LinearLayout>

            <Switch
                android:id="@+id/darkMode"
                style="@style/OptionenFragment.Entry.Switch"
                android:text="@string/optionenfragment_darkmode"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                style="@style/OptionenFragment.Entry.TextView"
                android:text="@string/optionenfragment_theme">

                <Spinner
                    android:id="@+id/theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_color_border"
                    android:backgroundTint="@android:color/transparent"
                    android:spinnerMode="dialog"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:src="@drawable/dotted_line"
                    app:tint="?attr/colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/optionfragment_header_calendar"
                    android:textColor="?attr/colorOnBackground" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:src="@drawable/dotted_line"
                    app:tint="?attr/colorOnBackground" />
            </LinearLayout>

            <Button
                android:id="@+id/btnCalClear"
                style="@style/OptionenFragment.Entry.Button"
                android:text="@string/settings_del_cal" />

            <Button
                android:id="@+id/btnGoogleUpdate"
                style="@style/OptionenFragment.Entry.Button"
                android:text="@string/settings_act_cal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:src="@drawable/dotted_line"
                    app:tint="?attr/colorOnBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/optionfragment_header_design"
                    android:textColor="?attr/colorOnBackground" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:src="@drawable/dotted_line"
                    app:tint="?attr/colorOnBackground" />
            </LinearLayout>

            <Button
                android:id="@+id/btnFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corners2"
                android:text="@string/settings_del_fav"
                android:textAppearance="@style/spinnerDropDownItemStyle"
                android:textColor="#eeeeee"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnDB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corners2"
                android:text="@string/settings_del_db"
                android:textAppearance="@style/spinnerDropDownItemStyle"
                android:textColor="#eeeeee"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corners2"
                android:text="@string/settings_act_fav"
                android:textAppearance="@style/spinnerDropDownItemStyle"
                android:textColor="#eeeeee"
                android:textSize="18sp" />


            <Switch
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corners2"
                android:padding="10dp"
                android:text="@string/settings_sync_cal"
                android:textColor="#eeeeee"
                android:textSize="18sp" />

            <Button
                android:id="@+id/privacyDeclaration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded_corners2"
                android:text="@string/settings_privacy_declaration"
                android:textAppearance="@style/spinnerDropDownItemStyle"
                android:textColor="#eeeeee"
                android:textSize="18sp" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/linearLayout5"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fhb" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>


