<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="1"
        android:stretchColumns="*"
        android:layout_marginTop="50dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/choose_course2"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spStudiengang"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:entries="@array/TestArray" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="@string/wahlmodul_wahlmodul_TV"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/wahlModulName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/all"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorLink="@color/colorPrimary"
                android:textSize="20sp"
                android:theme="@style/AutoCompleteStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/BtnOk"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_span="2"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded_corners"
                android:text="@string/search"
                android:textColor="#ffffff" />
        </TableRow>
    </TableLayout>
</RelativeLayout>