<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="496dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="0"
            android:text="@string/feedback_usability" />

        <RatingBar
            android:id="@+id/ratingBarUsability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressStyle"
            android:numStars="5"
            android:rating="3"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="0"
            android:text="@string/feedback_stability" />

        <RatingBar
            android:id="@+id/ratingBarStability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressStyle"
            android:numStars="5"
            android:rating="3"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_weight="0"
            android:text="@string/feedback_functions" />

        <RatingBar
            android:id="@+id/ratingBarFuntions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ProgressStyle"
            android:numStars="5"
            android:rating="3"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/feedback_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedBackInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:singleLine="false"
                android:theme="@style/ProgressStyle"
                android:hint="" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@drawable/button_rounded_corners"
            android:textColor="#eeeeee"
            android:text="@string/feedback_send" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>